basic app is ready

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,63 @@
 <html>
 <head>
-	<meta charset = "utf-8" >
-	<title> Simple Chat Application </title>
-	<script src ="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"> </script>
+    <title> Chat </title>
+
+<!--bs script-->
+
+<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Satisfy" />
+    <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<link href="/stylesheet.css" rel="stylesheet" />
+<style>
+
+body{
+    margin-top:30px;
+}
+
+</style>
+    <!--socket script-->
+    <script src ="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"> </script>
 </head>
 <body>
-	
-	<script src = "/chat.js"> </script>
-	This is simple chat application
+
+
+
+
+<!--frontend-->
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <div class="msg" id="msg" >     <h3> <span style= "color:black; padding-left: 110px;"> <strong> Online Users</strong> </span></h3> <ul class="list-group" id="users"> </ul>          </div>
+        </div>
+            <div class = "col-md-8"> 
+                <div id="output" >  </div>
+
+                
+                        <label> Enter Message </label> <br />
+                        <input id="handle" placeholder="Handl" type="text" class="form-control" /><br />
+                        <input id="message" placeholder="msg" type="text" class="form-control" />
+                        <br />
+                        <button id="send"> Send </button>
+                   
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+    <!--script-->
+    <script src="/chat.js" > </script>
+ 
 </body>
 </html>
