bug fixed-clearing input after submission

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-<html>
+<html ng-app>
 <head>
     <title> Chat </title>
 
@@ -12,6 +12,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <link href="/stylesheet.css" rel="stylesheet" />
+<script src ="/angular.min.js"></script>
 <style>
 
 body{
@@ -36,7 +37,7 @@ body{
         </div>
             <div class = "col-md-8"> 
                 <div id="output" >  </div>
-                <div id="noti" > </div>
+                <div id="noti"> </div>
 
                 
                         <label> Enter Message </label> <br />
@@ -50,15 +51,7 @@ body{
     </div>
 
 
+ <script src="/chat.js" > </script>
 
-
-
-
-
-
-
-    <!--script-->
-    <script src="/chat.js" > </script>
- 
 </body>
 </html>
