--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
                        </div>
                       
                         <div id="contentwrap" style="display: none;">
-                            <div id="header" style="font-family: 'Inconsolata', monospace;"> <span style="color:White; font-weight: 20px; font-size: 30px; padding-left: 30px;" >Welcome <strong style="color:white; font-size: 30px;"> {{name}},</strong>   <div style="color:green; display: inline;"> </div>You are online now </span> </div>
+                            <div id="header" style="font-family: 'Inconsolata', monospace; text-align:center;"> <span style="color:White; font-weight: 20px; font-size: 30px;" >Welcome <strong style="color:white; font-size: 30px;"> {{name}},</strong>   <div style="color:green; display: inline;"> </div>You are online now </span> </div>
                        
                         <span id="output"> </span>
                          <input id="message" placeholder="message" type="text" class="form-control" />
